fixes
- fixed thread synchronization issues.
- fixed clear button (now thread safe)
- fixed update loop error, previously starting inner loop from i and applying forces 2 times, now it starts from 0, and only applies forces once.