@@ -2,3 +2,8 @@
 Particle Attraction Simulation with java awt
 
 Eclipse project
+
+to set as vm arguments in eclipse's run configurations:
+--module-path "your_path" --add-modules javafx.controls,javafx.fxml
+
+Please make sure to replace 'your_path' with the actual file path ex.(....\JavaFX\javafx-sdk-19.0.2.1\lib)
